--- a/portofoliu.html
+++ b/portofoliu.html
@@ -86,6 +86,31 @@
             </section>
         </main>
 
+        <section class="cards">
+            <article class="cards__item">
+                <div class="cards__content">
+                    Proiectare și execuție lucrări de extindere rețea pentru <span class="cards__highlight">ELECTRICA SA</span>
+                    <ul class="cards__list">
+                        <li class="cards__list-item">
+                            branșamente
+                        </li>
+
+                        <li class="cards__list-item">
+                            linii aeriene și subterane de 0,4-20kV
+                        </li>
+
+                        <li class="cards__list-item">
+                            posturi de transformare și tablouri de distribuție
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="cards__year">
+                    1993 - 2004
+                </div>
+            </article>
+        </section>
+
         <footer class="frame frame--footer">
             <div class="footer">
                 <div class="footer__inner">
