--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </h1>
             </div>
 
-            <div class="frame frame--carousel"> <!-- for small screens only -->
+            <div class="frame frame--carousel-txt"> <!-- for small screens only -->
                 <div class="carousel-txt">
                     <h3 class="frame__text frame__text--carousel">
                         Proiectăm, executăm și întreținem instalații electrice începând cu anul 1993
