--- a/portofoliu.html
+++ b/portofoliu.html
@@ -60,15 +60,15 @@
                             <img class="carousel__image" src="./images/foto6.jpg" alt="cinema arta">
                         </figure>
                     </div>
+
+                    <button class="carousel__button carousel__button--prev is-hidden">
+                        <img class="svg carousel__svg" src="./images/arrow_side.svg" alt="previous image">
+                    </button>
+    
+                    <button class="carousel__button carousel__button--next">
+                        <img class="svg carousel__svg carousel__svg--next" src="./images/arrow_side.svg" alt="next iamge">
+                    </button>
                 </div>
-
-                <button class="carousel__button carousel__button--prev is-hidden">
-                    <img class="svg carousel__svg" src="./images/arrow_side.svg" alt="previous image">
-                </button>
-
-                <button class="carousel__button carousel__button--next">
-                    <img class="svg carousel__svg carousel__svg--next" src="./images/arrow_side.svg" alt="next iamge">
-                </button>
 
                 <div class="carousel__dots"> <!-- number of .carousel__dot must match the number of carousel__image -->
                     <button class="carousel__dot carousel__dot--active"></button>
@@ -87,6 +87,29 @@
         </main>
 
         <section class="cards">
+            <article class="cards__item">
+                <div class="cards__content">
+                    Proiectare și execuție lucrări de extindere rețea pentru <span class="cards__highlight">ELECTRICA SA</span>
+                    <ul class="cards__list">
+                        <li class="cards__list-item">
+                            branșamente
+                        </li>
+
+                        <li class="cards__list-item">
+                            linii aeriene și subterane de 0,4-20kV
+                        </li>
+
+                        <li class="cards__list-item">
+                            posturi de transformare și tablouri de distribuție
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="cards__year">
+                    1993 - 2004
+                </div>
+            </article>
+
             <article class="cards__item">
                 <div class="cards__content">
                     Proiectare și execuție lucrări de extindere rețea pentru <span class="cards__highlight">ELECTRICA SA</span>
