--- a/portofoliu.html
+++ b/portofoliu.html
@@ -87,7 +87,7 @@
         </main>
 
         <section class="cards">
-            <article class="cards__item">
+            <article class="frame cards__item frame--card">
                 <div class="cards__content">
                     Proiectare și execuție lucrări de extindere rețea pentru <span class="cards__highlight">ELECTRICA SA</span>
                     <ul class="cards__list">
