--- a/portofoliu.html
+++ b/portofoliu.html
@@ -89,30 +89,114 @@
         <section class="cards">
             <article class="frame cards__item frame--card">
                 <div class="cards__content">
-                    Proiectare și execuție lucrări de extindere rețea pentru <span class="cards__highlight">ELECTRICA SA</span>
+                    <p class="cards__description">
+                        Extindere <span class="cards__highlight">D-TOYS SRL</span>, clădire multifuncțională pentru Parohia Reformată (în stadiu de construcție)
+                    </p>
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Brutărie și sediu DIOSZEGI, Sf. Gheorghe 1250A (în stadiu de construcție)
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    termen finalizare iun.2023
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Centru Imagistic PHOENIX Sf. Gheorghe 630A, Proiectare si Execuție (în stadiu de construcție)
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    iun.2022
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție Stadion de fotbal SEPSI OSK
+                    </p>
+                </div>
+
+                <ul class="cards__list">
+                    <li class="cards__list-item">
+                        distribuție el. 2500A cu 2xTrafo si 2xGenerator
+                    </li>
+                </ul>
+
+                <div class="cards__year">
+                    2021
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">DALIA</span>, Valea Crișului
+                    </p>
+
                     <ul class="cards__list">
                         <li class="cards__list-item">
-                            branșamente
-                        </li>
-
-                        <li class="cards__list-item">
-                            linii aeriene și subterane de 0,4-20kV
-                        </li>
-
-                        <li class="cards__list-item">
-                            posturi de transformare și tablouri de distribuție
+                            distribuție electrică 250A cu transformator propriu și generator de curent rezervă automată 20/0.4kV
                         </li>
                     </ul>
                 </div>
 
                 <div class="cards__year">
-                    1993 - 2004
+                    2008
                 </div>
             </article>
 
-            <article class="cards__item">
+            <article class="frame cards__item frame--card">
                 <div class="cards__content">
-                    Proiectare și execuție lucrări de extindere rețea pentru <span class="cards__highlight">ELECTRICA SA</span>
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">PEPSI</span>, Covasna
+                    </p>
+
+                    <ul class="cards__list">
+                        <li class="cards__list-item">
+                            distribuție electrică 2500A cu transformator de rezervă 20/0.4kV
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="cards__year">
+                    2008
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">DUNAPACK RAMBOX</span>, Sfântu Gheorghe
+                    </p>
+
+                    <ul class="cards__list">
+                        <li class="cards__list-item">
+                            distribuție electrică 2500A
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="cards__year">
+                    2004
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție lucrări de extindere rețea pentru <span class="cards__highlight">ELECTRICA SA</span>
+                    </p>
+
                     <ul class="cards__list">
                         <li class="cards__list-item">
                             branșamente
