--- a/portofoliu.html
+++ b/portofoliu.html
@@ -98,7 +98,7 @@
             <article class="frame cards__item frame--card">
                 <div class="cards__content">
                     <p class="cards__description">
-                        Brutărie și sediu DIOSZEGI, Sf. Gheorghe 1250A (în stadiu de construcție)
+                        Brutărie și sediu <span class="cards__highlight">DIOSZEGI</span>, Sf. Gheorghe 1250A (în stadiu de construcție)
                     </p>
                 </div>
 
@@ -110,19 +110,19 @@
             <article class="frame cards__item frame--card">
                 <div class="cards__content">
                     <p class="cards__description">
-                        Centru Imagistic PHOENIX Sf. Gheorghe 630A, Proiectare si Execuție (în stadiu de construcție)
+                        Centru Imagistic <span class="cards__highlight">PHOENIX</span> Sf. Gheorghe 630A, Proiectare si Execuție (în stadiu de construcție)
                     </p>
                 </div>
 
                 <div class="cards__year">
-                    iun.2022
+                    2022
                 </div>
             </article>
 
             <article class="frame cards__item frame--card">
                 <div class="cards__content">
                     <p class="cards__description">
-                        Proiectare și execuție Stadion de fotbal SEPSI OSK
+                        Proiectare și execuție Stadion de fotbal <span class="cards__highlight">SEPSI OSK</span>
                     </p>
                 </div>
 
@@ -134,6 +134,418 @@
 
                 <div class="cards__year">
                     2021
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție sediu de productie si birouri <span class="cards__highlight">Sol Farm</span> in localitatea Chichis
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2020
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție distribuție electrică principală la <span class="cards__highlight">Spitalul Jud.</span> Sf.Gheorghe 3200A
+                    </p>
+                </div>
+
+                <ul class="cards__list">
+                    <li class="cards__list-item">
+                        automatizare 2xTrafo si Generator
+                    </li>
+                </ul>
+
+                <div class="cards__year">
+                    2019
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Modernizare <span class="cards__highlight">Stadion de Fotbal</span> vechi Sf.Gheorghe
+                    </p>
+                </div>
+
+                <ul class="cards__list">
+                    <li class="cards__list-item">
+                        distribuție electrică 1600A
+                    </li>
+
+                    <li class="cards__list-item">
+                        nocturnă
+                    </li>
+
+                    <li class="cards__list-item">
+                        Încălzire el. gazon
+                    </li>
+                </ul>
+
+                <div class="cards__year">
+                    2019
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">D-TOYS</span> (faza II.), Sfântu Gheorghe
+                    </p>
+                </div>
+
+                <ul class="cards__list">
+                    <li class="cards__list-item">
+                        distribuție electrică 630A cu transformator propriu 20/0.4kV
+                    </li>
+
+                    <li class="cards__list-item">
+                        rețea Voce-Date, sistem supraveghere Video și sistem de securitate
+                    </li>
+                </ul>
+
+                <div class="cards__year">
+                    2017
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție <span class="cards__highlight">PATINOAR</span> Târgu Secuiesc
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2017
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de reparații motoare auto <span class="cards__highlight">AUTO-MOTO</span> Chilieni
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2016
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Execuție Iluminat public și arhitectural <span class="cards__highlight">Centrul Sfântu Gheorghe</span>
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2016
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Execuție cinema <span class="cards__highlight">ARTA BY CITYPLEX</span> - Sfântu Gheorghe
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2016
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">DEICO</span> (faza II.), Sfântu Gheorghe
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2015
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Execuție <span class="cards__highlight">CENTRU DE MANAGEMENT INTEGRAT AL DEȘEURILOR</span> Boroșneu Mare
+                    </p>
+                </div>
+
+                <ul class="cards__list">
+                    <li class="cards__list-item">
+                        distribuție electrică 1250A cu transformator propriu 20/0.4kV 
+                    </li>
+
+                    <li class="cards__list-item">
+                        generator de rezervă cu cuplare automată 160kVA
+                    </li>
+
+                    <li class="cards__list-item">
+                        rețea Voce-Date realizat cu fibre optice
+                    </li>
+                </ul>
+
+                <div class="cards__year">
+                    2015
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Execuție <span class="cards__highlight">BAZĂ DE TRATAMENT ȘI COMPLEX TURISTIC</span>, Șugaș Băi
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2015
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Execuție <span class="cards__highlight">BAZĂ DE TRATAMENT ȘI COMPLEX TURISTIC</span>, Șugaș Băi
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2014
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">MASTERPLAST</span>, Sfântu Gheorghe
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2013
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Complex balnear și turistic <span class="cards__highlight">DRUMUL APELOR MINERALE</span> Covasna: Belin, Șugaș Băi, Olteni, Baraolt, Bixad, Malnaș, Brețcu
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2013
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Complex balnear și turistic <span class="cards__highlight">DRUMUL APELOR MINERALE</span> Harghita: Băile Jigodin, Băile Szejke, Băile Tușnad, Borsec, Băile Homorod, Remetea
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2013
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție sediu și depozit comercial <span class="cards__highlight">ARIX</span>, Sfantu Gheorghe
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2013
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție complex agricol cu sortare și depozitare climatizată <span class="cards__highlight">SOL-FARM</span>, Sf. Gheorghe
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2012
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție complex agricol cu sortare și depozitare climatizată <span class="cards__highlight">TIMATE</span>, Cernat
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2011
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție complex agricol cu sortare și depozitare climatizată <span class="cards__highlight">MP-AGRO</span>, Cernat
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2011
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție complex agricol cu sortare și depozitare climatizată <span class="cards__highlight">PROD AGRICOM</span>, Cernat
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2011
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">BERTIS</span>, Sfântu Gheorghe
+                    </p>
+                </div>
+
+                <ul class="cards__list">
+                    <li class="cards__list-item">
+                        distribuție electrică 1600A cu transformator propriu 20/0.4kV 
+                    </li>
+
+                    <li class="cards__list-item">
+                        generator de rezervă cu cuplare automată 630kVA
+                    </li>
+                </ul>
+
+                <div class="cards__year">
+                    2010
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">AZUGA WATERS</span>, Catalina
+                    </p>
+                </div>
+
+                <ul class="cards__list">
+                    <li class="cards__list-item">
+                        distribuție electrică 1000A cu transformator propriu 20/0.4kV 
+                    </li>
+                </ul>
+
+                <div class="cards__year">
+                    2010
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">BERTI-KRIS</span>, Sfântu Gheorghe
+                    </p>
+                </div>
+
+                <ul class="cards__list">
+                    <li class="cards__list-item">
+                        distribuție electrică 1250A cu transformator propriu 20/0.4kV 
+                    </li>
+
+                    <li class="cards__list-item">
+                        generator de rezervă cu cuplare automată 400kVA
+                    </li>
+                </ul>
+
+                <div class="cards__year">
+                    2009
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">D-TOYS</span>, Sfântu Gheorghe
+                    </p>
+                </div>
+
+                <ul class="cards__list">
+                    <li class="cards__list-item">
+                        distribuție electrică 800A cu transformator propriu 20/0.4kV
+                    </li>
+                </ul>
+
+                <div class="cards__year">
+                    2009
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">VIASTEIN</span>, Chichiș
+                    </p>
+                </div>
+
+                <ul class="cards__list">
+                    <li class="cards__list-item">
+                        distribuție electrică 800A cu transformator propriu 20/0.4kV
+                    </li>
+                </ul>
+
+                <div class="cards__year">
+                    2009
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">AUTOCOMPRESS</span>, Arcuș
+                    </p>
+                </div>
+
+                <ul class="cards__list">
+                    <li class="cards__list-item">
+                        distribuție electrică 400A cu transformator propriu și generator de curent rezervă automată 20/0.4kV
+                    </li>
+                </ul>
+
+                <div class="cards__year">
+                    2009
+                </div>
+            </article>
+
+            <article class="frame cards__item frame--card">
+                <div class="cards__content">
+                    <p class="cards__description">
+                        Proiectare și execuție hală de producție și sediu <span class="cards__highlight">ILTA</span>, Arcuș
+                    </p>
+                </div>
+
+                <div class="cards__year">
+                    2008
                 </div>
             </article>
 
