--- a/portofoliu.html
+++ b/portofoliu.html
@@ -22,8 +22,7 @@
                         <li class="nav__item"><a class="nav__link" href="index.html">Acasă</a></li>
                         <li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
                         <li class="nav__item"><a class="nav__link" href="portofoliu.html">Portofoliu</a></li>
-                        <li class="nav__item"><a class="nav__link" href="#">Certificate</a></li>
-                        <li class="nav__item"><a class="nav__link" href="#">Cariere</a></li>
+                        <li class="nav__item"><a class="nav__link" href="cariere.html">Cariere</a></li>
                         <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
                     </ul>
                 </nav>
