--- a/activitate.html
+++ b/activitate.html
@@ -41,9 +41,9 @@
 						</h2>
 					</div>
 	
-					<h3 class="frame frame__text">
+					<p class="frame frame__text">
 						Suntem autorizați de către ANRE pentru proiectare instalații electrice de orice putere până la tensiunea de 20kV
-					</h3>
+					</p>
 				</section>
 	
 				<div class="hero-section__button">
@@ -53,9 +53,9 @@
 		</div>
 
 		<section>
-			<h2 class="frame frame__title">
+			<h3 class="frame frame__title">
 				Proiectare și execuție
-			</h2>
+			</h3>
 			<ul class="frame frame__text frame__text--list">
 				<li class="frame__list-item">Instalații de iluminat și distribuție electrică</li>
 				<li class="frame__list-item">Instalații de paratrăsnet și împământare</li>
@@ -66,9 +66,9 @@
 		</section>
 
 		<section class="page__separator">
-			<h2 class="frame frame__title">
+			<h3 class="frame frame__title">
 				Măsurători și verificări periodice
-			</h2>
+			</h3>
 			<ul class="frame frame__text frame__text--list">
 				<li class="frame__list-item">Verificare instalație paratrăznet</li>
 				<li class="frame__list-item">Verificare prize de împământare și rețea de egalizare potențiale</li>
@@ -80,9 +80,9 @@
 		</section>
 
 		<section class="page__separator">
-			<h2 class="frame frame__title">
+			<h3 class="frame frame__title">
 				Instalații de curenți slabi
-			</h2>
+			</h3>
 
 			<ul class="frame frame__text frame__text--list">
 				<li class="frame__list-item">Sisteme de securitate anti efracție</li>
