--- a/cariere.html
+++ b/cariere.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="page">
-    <div class="bg-img bg-img--portfolio" id="top">
+    <div class="bg-img bg-img--careers" id="top">
         <header class="frame frame--header">
             <div class="header">
                 <a href="index.html">
@@ -32,7 +32,34 @@
         </header>
 
         <main>
+            <section>
+                <div>
+                    <span class="frame__text--side">ELCO SA</span>
+                    <h3>
+                        Locuri de muncă pentru un viitor garantat
+                    </h3>
+                </div>
+                
+                <div>
+                    <p>
 
+                    </p>
+
+                    <p>
+
+                    </p>
+
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </section>
+
+            <section>
+
+            </section>
         </main>
 
         <footer class="frame frame--footer">
