--- a/cariere.html
+++ b/cariere.html
@@ -33,32 +33,57 @@
 
         <main>
             <section>
-                <div>
+                <div class="frame frame--hero">
                     <span class="frame__text--side">ELCO SA</span>
-                    <h3>
+                    <h2 class="frame__text frame__text--big">
                         Locuri de muncă pentru un viitor garantat
-                    </h3>
+                    </h2>
                 </div>
                 
-                <div>
-                    <p>
-
-                    </p>
-
-                    <p>
-
+                <article class="frame">
+                    <p class="frame__text">
+                        Firma noastră oferă posibilitate atât pentru specialiști adevărați cât și pentru cei care au intenția de perfecționare în domeniul instalațiilor electrice cu motivație și intenție de a participa în proiecte complexe și responsabile.
+                        <br>
+                        <br>
+                        Putem oferi în schimb:
                     </p>
 
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li class="frame__list-item">Salariu promițător</li>
+                        <li class="frame__list-item">Condiții de muncă sigure</li>
+                        <li class="frame__list-item">Program de lucru relativ scurt (zilnic: 7-15.30, sâmbătă și duminică liber)</li>
                     </ul>
-                </div>
+                </article>
             </section>
 
             <section>
+                <div>
+                    <h2>Momentan căutăm colegi pentru următoarele domenii de activitate:</h2>
+                </div>
 
+                <article>
+                    <p>Inginer electric</p>
+                    <p>Cerințe:</p>
+                    <ul>
+                        <li>Studii superioare în domeniu</li>
+                        <li>Abilități de lucru în echipă și comunicare</li>
+                        <li>Cunoștințe: CAD, EXCELL</li>
+                        <li>Motivație pentru a participa în proiecte complexe</li>
+                        <li>Pretenția de calitate și ordine </li>
+                    </ul>
+                </article>
+
+                <article>
+                    <p>Șef șantier în instalații electrice</p>
+                    <p>Cerințe:</p>
+                    <ul>
+                        <li>Autorizație ANRE validă</li>
+                        <li>Experiență în instalații electrice de complexitate ridicată (de nivelul proiectelor realizate de ELCO)</li>
+                        <li>Abilități de lucru în echipă și comunicare</li>
+                        <li>Motivație pentru a participa în proiecte complexe</li>
+                        <li>Pretenția de calitate și ordine </li>
+                    </ul>
+                </article>
             </section>
         </main>
 
