--- a/portofoliu.html
+++ b/portofoliu.html
@@ -126,7 +126,7 @@
                 </div>
 
                 <ul class="cards__list">
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         distribuție el. 2500A cu 2xTrafo si 2xGenerator
                     </li>
                 </ul>
@@ -156,7 +156,7 @@
                 </div>
 
                 <ul class="cards__list">
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         automatizare 2xTrafo si Generator
                     </li>
                 </ul>
@@ -174,15 +174,15 @@
                 </div>
 
                 <ul class="cards__list">
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         distribuție electrică 1600A
                     </li>
 
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         nocturnă
                     </li>
 
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         Încălzire el. gazon
                     </li>
                 </ul>
@@ -200,11 +200,11 @@
                 </div>
 
                 <ul class="cards__list">
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         distribuție electrică 630A cu transformator propriu 20/0.4kV
                     </li>
 
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         rețea Voce-Date, sistem supraveghere Video și sistem de securitate
                     </li>
                 </ul>
@@ -282,15 +282,15 @@
                 </div>
 
                 <ul class="cards__list">
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         distribuție electrică 1250A cu transformator propriu 20/0.4kV 
                     </li>
 
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         generator de rezervă cu cuplare automată 160kVA
                     </li>
 
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         rețea Voce-Date realizat cu fibre optice
                     </li>
                 </ul>
@@ -428,11 +428,11 @@
                 </div>
 
                 <ul class="cards__list">
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         distribuție electrică 1600A cu transformator propriu 20/0.4kV 
                     </li>
 
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         generator de rezervă cu cuplare automată 630kVA
                     </li>
                 </ul>
@@ -450,7 +450,7 @@
                 </div>
 
                 <ul class="cards__list">
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         distribuție electrică 1000A cu transformator propriu 20/0.4kV 
                     </li>
                 </ul>
@@ -468,11 +468,11 @@
                 </div>
 
                 <ul class="cards__list">
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         distribuție electrică 1250A cu transformator propriu 20/0.4kV 
                     </li>
 
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         generator de rezervă cu cuplare automată 400kVA
                     </li>
                 </ul>
@@ -490,7 +490,7 @@
                 </div>
 
                 <ul class="cards__list">
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         distribuție electrică 800A cu transformator propriu 20/0.4kV
                     </li>
                 </ul>
@@ -508,7 +508,7 @@
                 </div>
 
                 <ul class="cards__list">
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         distribuție electrică 800A cu transformator propriu 20/0.4kV
                     </li>
                 </ul>
@@ -526,7 +526,7 @@
                 </div>
 
                 <ul class="cards__list">
-                    <li class="cards__list-item">
+                    <li class="frame__list-item">
                         distribuție electrică 400A cu transformator propriu și generator de curent rezervă automată 20/0.4kV
                     </li>
                 </ul>
@@ -555,7 +555,7 @@
                     </p>
 
                     <ul class="cards__list">
-                        <li class="cards__list-item">
+                        <li class="frame__list-item">
                             distribuție electrică 250A cu transformator propriu și generator de curent rezervă automată 20/0.4kV
                         </li>
                     </ul>
@@ -573,7 +573,7 @@
                     </p>
 
                     <ul class="cards__list">
-                        <li class="cards__list-item">
+                        <li class="frame__list-item">
                             distribuție electrică 2500A cu transformator de rezervă 20/0.4kV
                         </li>
                     </ul>
@@ -591,7 +591,7 @@
                     </p>
 
                     <ul class="cards__list">
-                        <li class="cards__list-item">
+                        <li class="frame__list-item">
                             distribuție electrică 2500A
                         </li>
                     </ul>
@@ -609,15 +609,15 @@
                     </p>
 
                     <ul class="cards__list">
-                        <li class="cards__list-item">
+                        <li class="frame__list-item">
                             branșamente
                         </li>
 
-                        <li class="cards__list-item">
+                        <li class="frame__list-item">
                             linii aeriene și subterane de 0,4-20kV
                         </li>
 
-                        <li class="cards__list-item">
+                        <li class="frame__list-item">
                             posturi de transformare și tablouri de distribuție
                         </li>
                     </ul>
