--- a/cariere.html
+++ b/cariere.html
@@ -40,28 +40,28 @@
                     </h2>
                 </div>
                 
-                <article class="frame">
-                    <p class="frame__text">
+                <article class="frame frame__text">
+                    <p>
                         Firma noastră oferă posibilitate atât pentru specialiști adevărați cât și pentru cei care au intenția de perfecționare în domeniul instalațiilor electrice cu motivație și intenție de a participa în proiecte complexe și responsabile.
-                        <br>
-                        <br>
+                    </p>
+                    <br>
+                    <p>
                         Putem oferi în schimb:
                     </p>
-
-                    <ul>
+                    <ul class="frame__text frame__text--inner-list">
                         <li class="frame__list-item">Salariu promițător</li>
                         <li class="frame__list-item">Condiții de muncă sigure</li>
-                        <li class="frame__list-item">Program de lucru relativ scurt (zilnic: 7-15.30, sâmbătă și duminică liber)</li>
+                        <li class="frame__list-item frame__list-item--last">Program de lucru relativ scurt (zilnic: 7-15.30, sâmbătă și duminică liber)</li>
                     </ul>
                 </article>
             </section>
 
             <section>
-                <div>
-                    <h2>Momentan căutăm colegi pentru următoarele domenii de activitate:</h2>
+                <div class="frame">
+                    <h2 class="frame__text frame__text--medium">Momentan căutăm colegi pentru următoarele domenii de activitate:</h2>
                 </div>
 
-                <article>
+                <article class="frame frame__text">
                     <p>Inginer electric</p>
                     <p>Cerințe:</p>
                     <ul>
