--- a/cariere.html
+++ b/cariere.html
@@ -49,7 +49,7 @@
                         Putem oferi în schimb:
                     </p>
                     <ul class="frame__text frame__text--inner-list">
-                        <li class="frame__list-item">Salariu promițător</li>
+                        <li class="frame__list-item frame__list-item--first">Salariu promițător</li>
                         <li class="frame__list-item">Condiții de muncă sigure</li>
                         <li class="frame__list-item frame__list-item--last">Program de lucru relativ scurt (zilnic: 7-15.30, sâmbătă și duminică liber)</li>
                     </ul>
@@ -62,14 +62,14 @@
                 </div>
 
                 <article class="frame frame__text">
-                    <p>Inginer electric</p>
+                    <p class="page__counter">Inginer electric</p>
                     <p>Cerințe:</p>
-                    <ul>
-                        <li>Studii superioare în domeniu</li>
-                        <li>Abilități de lucru în echipă și comunicare</li>
-                        <li>Cunoștințe: CAD, EXCELL</li>
-                        <li>Motivație pentru a participa în proiecte complexe</li>
-                        <li>Pretenția de calitate și ordine </li>
+                    <ul class="frame__text--inner-list">
+                        <li class="frame__list-item frame__list-item--first">Studii superioare în domeniu</li>
+                        <li class="frame__list-item">Abilități de lucru în echipă și comunicare</li>
+                        <li class="frame__list-item">Cunoștințe: CAD, EXCELL</li>
+                        <li class="frame__list-item">Motivație pentru a participa în proiecte complexe</li>
+                        <li class="frame__list-item frame__list-item--last">Pretenția de calitate și ordine </li>
                     </ul>
                 </article>
 
