--- a/cariere.html
+++ b/cariere.html
@@ -31,7 +31,7 @@
             </div>    
         </header>
 
-        <main>
+        <main class="page__counter-parent">
             <section>
                 <div class="frame frame--hero">
                     <span class="frame__text--side">ELCO SA</span>
@@ -61,8 +61,9 @@
                     <h2 class="frame__text frame__text--medium">Momentan căutăm colegi pentru următoarele domenii de activitate:</h2>
                 </div>
 
-                <article class="frame frame__text">
-                    <p class="page__counter">Inginer electric</p>
+                <article class="frame frame__text frame__text--ms">
+                    <p class="page__bold page__counter-child">Inginer electric</p>
+                    <br>
                     <p>Cerințe:</p>
                     <ul class="frame__text--inner-list">
                         <li class="frame__list-item frame__list-item--first">Studii superioare în domeniu</li>
@@ -73,15 +74,16 @@
                     </ul>
                 </article>
 
-                <article>
-                    <p>Șef șantier în instalații electrice</p>
+                <article class="frame frame__text frame__text--ms">
+                    <p class="page__bold page__counter-child">Șef șantier în instalații electrice</p>
+                    <br>
                     <p>Cerințe:</p>
-                    <ul>
-                        <li>Autorizație ANRE validă</li>
-                        <li>Experiență în instalații electrice de complexitate ridicată (de nivelul proiectelor realizate de ELCO)</li>
-                        <li>Abilități de lucru în echipă și comunicare</li>
-                        <li>Motivație pentru a participa în proiecte complexe</li>
-                        <li>Pretenția de calitate și ordine </li>
+                    <ul class="frame__text--inner-list">
+                        <li class="frame__list-item frame__list-item--first">Autorizație ANRE validă</li>
+                        <li class="frame__list-item">Experiență în instalații electrice de complexitate ridicată (de nivelul proiectelor realizate de ELCO)</li>
+                        <li class="frame__list-item">Abilități de lucru în echipă și comunicare</li>
+                        <li class="frame__list-item">Motivație pentru a participa în proiecte complexe</li>
+                        <li class="frame__list-item frame__list-item--last">Pretenția de calitate și ordine </li>
                     </ul>
                 </article>
             </section>
