--- a/cariere.html
+++ b/cariere.html
@@ -87,6 +87,8 @@
                     </ul>
                 </article>
             </section>
+
+            <p class="frame frame__text">Dacă credeți că locul dvs. este în echipa ELCO vă rugăm să ne <a href="#">contactați</a>!</p>
         </main>
 
         <footer class="frame frame--footer">
