--- a/activitate.html
+++ b/activitate.html
@@ -52,7 +52,7 @@
 			</main>
 		</div>
 
-		<section>
+		<section id="services">
 			<h3 class="frame frame__title">
 				Proiectare și execuție
 			</h3>
