--- a/activitate.html
+++ b/activitate.html
@@ -24,7 +24,7 @@
 							<li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
 							<li class="nav__item"><a class="nav__link" href="portofoliu.html">Portofoliu</a></li>
 							<li class="nav__item"><a class="nav__link" href="cariere.html">Cariere</a></li>
-							<li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
+							<li class="nav__item"><a class="nav__link" href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
 
