--- a/cariere.html
+++ b/cariere.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ELCO | Portofoliu</title>
+    <title>ELCO | Cariere</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="page">
@@ -23,7 +23,7 @@
                         <li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
                         <li class="nav__item"><a class="nav__link" href="portofoliu.html">Portofoliu</a></li>
                         <li class="nav__item"><a class="nav__link" href="cariere.html">Cariere</a></li>
-                        <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
+                        <li class="nav__item"><a class="nav__link" href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
 
@@ -88,7 +88,7 @@
                 </article>
             </section>
 
-            <p class="frame frame__text">Dacă credeți că locul dvs. este în echipa ELCO vă rugăm să ne <a href="#">contactați</a>!</p>
+            <p class="frame frame__text">Dacă credeți că locul dvs. este în echipa ELCO vă rugăm să ne <a href="contact.html">contactați</a>!</p>
         </main>
 
         <footer class="frame frame--footer">
