--- a/index.html
+++ b/index.html
@@ -1,20 +1,3 @@
-<!------------------------------------------------------------------------
-    ----------------------- Legend -----------------------
-
-    Class                       Comment
-
-    bg                          generic block for background image
-    bg--hero                    modifier for when the background image does not take the full height of the body, this is specific for hero image
-    bg--secondary               modifier for when the background image does not take the full height of the body, this is specific for secondary image
-    frame                       block for adding a white strip background
-    frame--header               rounds only the bottom-left corner
-
-    ----------------------- Ideas -----------------------
-    
-    for positioning the elements on desktop ."page-name" has paddng left and .frame has padding right
-
--------------------------------------------------------------------------->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,7 +23,7 @@
                         <li class="nav__item"><a class="nav__link" href="activitate.html">Activitate</a></li>
                         <li class="nav__item"><a class="nav__link" href="portofoliu.html">Portofoliu</a></li>
                         <li class="nav__item"><a class="nav__link" href="cariere.html">Cariere</a></li>
-                        <li class="nav__item"><a class="nav__link" href="#">Contact</a></li>
+                        <li class="nav__item"><a class="nav__link" href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
 
