--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="page">
-    <div class="bg-img bg-img--careers" id="top">
+    <div class="bg-img bg-img--contact" id="top">
         <header class="frame frame--header">
             <div class="header">
                 <a href="index.html">
@@ -31,64 +31,25 @@
             </div>    
         </header>
 
-        <main class="page__counter-parent">
-            <section>
-                <div class="frame frame--hero">
-                    <span class="frame__text--side">ELCO SA</span>
-                    <h2 class="frame__text frame__text--big">
-                        Locuri de muncă pentru un viitor garantat
-                    </h2>
-                </div>
-                
-                <article class="frame frame__text">
-                    <p>
-                        Firma noastră oferă posibilitate atât pentru specialiști adevărați cât și pentru cei care au intenția de perfecționare în domeniul instalațiilor electrice cu motivație și intenție de a participa în proiecte complexe și responsabile.
-                    </p>
-                    <br>
-                    <p>
-                        Putem oferi în schimb:
-                    </p>
-                    <ul class="frame__text frame__text--inner-list">
-                        <li class="frame__list-item frame__list-item--first">Salariu promițător</li>
-                        <li class="frame__list-item">Condiții de muncă sigure</li>
-                        <li class="frame__list-item frame__list-item--last">Program de lucru relativ scurt (zilnic: 7-15.30, sâmbătă și duminică liber)</li>
-                    </ul>
-                </article>
-            </section>
+        <main>
+            <div class="frame frame--hero">
+                <span class="frame__text--side is-hidden">ELCO SA</span>
+                <h2 class="frame__text frame__text--big">
+                    SC Electroconstrucția ELCO SA
+                </h2>
+            </div>
 
-            <section>
-                <div class="frame">
-                    <h2 class="frame__text frame__text--medium">Momentan căutăm colegi pentru următoarele domenii de activitate:</h2>
-                </div>
+            <div class="frame frame__text">
+                <p>520027 Sfântu Gheorghe, jud Covasna, str Nicolae Bălcescu nr.17</p>
+                <p>Tel: 0267 351 009</p>
+                <p>Fax: 0267 351 009</p>
+                <p>Email: elco@elco-cv.ro</p>
+                <p>Pagina web: www.elco-cv.ro</p>
+                <p>CIF: RO3837813</p>
+                <p>REG: J14/312/1993</p>
+                <p>Program: Luni - Vineri între orele: 7.00 - 15.30 </p>
 
-                <article class="frame frame__text frame__text--ms">
-                    <p class="page__bold page__counter-child">Inginer electric</p>
-                    <br>
-                    <p>Cerințe:</p>
-                    <ul class="frame__text--inner-list">
-                        <li class="frame__list-item frame__list-item--first">Studii superioare în domeniu</li>
-                        <li class="frame__list-item">Abilități de lucru în echipă și comunicare</li>
-                        <li class="frame__list-item">Cunoștințe: CAD, EXCELL</li>
-                        <li class="frame__list-item">Motivație pentru a participa în proiecte complexe</li>
-                        <li class="frame__list-item frame__list-item--last">Pretenția de calitate și ordine </li>
-                    </ul>
-                </article>
-
-                <article class="frame frame__text frame__text--ms">
-                    <p class="page__bold page__counter-child">Șef șantier în instalații electrice</p>
-                    <br>
-                    <p>Cerințe:</p>
-                    <ul class="frame__text--inner-list">
-                        <li class="frame__list-item frame__list-item--first">Autorizație ANRE validă</li>
-                        <li class="frame__list-item">Experiență în instalații electrice de complexitate ridicată (de nivelul proiectelor realizate de ELCO)</li>
-                        <li class="frame__list-item">Abilități de lucru în echipă și comunicare</li>
-                        <li class="frame__list-item">Motivație pentru a participa în proiecte complexe</li>
-                        <li class="frame__list-item frame__list-item--last">Pretenția de calitate și ordine </li>
-                    </ul>
-                </article>
-            </section>
-
-            <p class="frame frame__text">Dacă credeți că locul dvs. este în echipa ELCO vă rugăm să ne <a href="#">contactați</a>!</p>
+            </div>
         </main>
 
         <footer class="frame frame--footer">
